--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "kanban",
+  "name": "framer-motion",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -11,6 +11,7 @@
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
     "eslint-config-airbnb": "^19.0.2",
+    "framer-motion": "^10.12.16",
     "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
